able to display individual dairy entry, a list of dairy entry and blocks non createby users from seeing diary entries.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,7 @@
+.container {
+      padding: 0 15px;
+}
+
 header {
   text-align: center;
 }
@@ -19,4 +23,22 @@ form {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+select {
+  border:  1px solid #ccc;
+  border-radius: 4px;
+  height: 34px;
+  margin: 0 auto;
+  text-align: center;
+  width: 50%;
+  display: flex;
+  &.rateIt {
+    text-align: center;
+  }
+
+}
+
+.form-group {
+    margin-bottom: 10px;
 }
