multiple emotions still does not work, prettyfied some of the code

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,10 +23,10 @@ h3 {
 i {
   color: #46A1D9;
 }
-form {
-  width: 75%;
-  margin: 10px auto 0;
-}
+// form {
+//   width: 75%;
+//   margin: 10px auto 0;
+// }
 
 .panel-heading {
     display: flex;
