--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,5 @@
+
+
 .container {
   padding: 0 15px;
 }
@@ -84,4 +86,19 @@ button.btn {
     color: #FFBC42;
     text-decoration: none;
   }
+}
+
+
+@media screen and (min-width: 480px) {
+
+  .xMobile {
+      display: none;
+    }
+}
+
+@media screen and (max-width: 479px) {
+
+  .xFull {
+      display: none;
+    }
 }
