--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,16 @@
   padding: 0 15px;
 }
 
+.panel .container {
+    padding: 0;
+
+}
+
+.contacts .panel-heading {
+  text-align: center;
+  background: #00c593;
+}
+
 header {
   text-align: center;
   background: #11998e;
@@ -23,18 +33,35 @@ h3 {
   font-size: 18px;
 }
 
-a.standard-button {
-  color: #0B587C;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: bold;
-  &:hover {
-    color: #FFBC42;
+a {
+  &#fullTabs-tab-1{
+    color: #0B587C;
+    text-transform: uppercase;
+  }
+  &#fullTabs-tab-2{
+    color: #0B587C;
+    text-transform: uppercase;
+  }
+  &#fullTabs-tab-3{
+    color: #0B587C;
+    text-transform: uppercase;
+  }
+
+  &.standard-button {
+    color: white;
+    text-transform: uppercase;
     text-decoration: none;
+    font-weight: bold;
+    &:hover {
+      color: #FFBC42;
+      text-decoration: none;
+    }
+    &:active {
+      color: #FFBC42;
+    }
   }
-  &:active {
-    color: #FFBC42;
-  }
+
+
 }
 
 i {
@@ -71,6 +98,7 @@ form {
   margin-bottom: 10px;
 }
 
+
 button.btn {
   background-color: #11998e;
   display: flex;
@@ -94,6 +122,9 @@ button.btn {
   .xMobile {
       display: none;
     }
+  .panel.body {
+   background-color:  #f5f5f5;
+  }
 }
 
 @media screen and (max-width: 479px) {
