--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 
 .container {
   padding: 0 15px;
+  max-with: 600px;
 }
 
 .panel .container {
@@ -33,10 +34,18 @@ h3 {
   font-size: 18px;
 }
 
+.nav-tabs {
+  display: flex;
+  justify-content: center;
+  border-bottom: 0px;
+}
+
+
 a {
   &#fullTabs-tab-1{
     color: #0B587C;
     text-transform: uppercase;
+
   }
   &#fullTabs-tab-2{
     color: #0B587C;
@@ -125,6 +134,17 @@ button.btn {
   .panel.body {
    background-color:  #f5f5f5;
   }
+
+  .tab-content>.active {
+     background-color:  #f5f5f5;
+     min-height: 400px;
+     border-radius: 10px;
+         border: 1px solid #ddd;
+}
+  .nav-tabs>li.active>a:focus {
+     background-color:  #f5f5f5;
+  }
+
 }
 
 @media screen and (max-width: 479px) {
