--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,12 +1,11 @@
-
-
-.container {
+main.container {
   padding: 0 15px;
-  max-with: 600px;
+  max-width: 750px;
 }
 
+
 .panel .container {
-    padding: 0;
+  padding: 0;
 
 }
 
@@ -36,7 +35,7 @@ h3 {
 
 .nav-tabs {
   display: flex;
-  justify-content: center;
+  justify-content:  space-evenly;
   border-bottom: 0px;
 }
 
@@ -69,8 +68,6 @@ a {
       color: #FFBC42;
     }
   }
-
-
 }
 
 i {
@@ -112,44 +109,63 @@ button.btn {
   background-color: #11998e;
   display: flex;
   margin: 0 auto;
-  color: #0B587C;
+  color: white;
   text-transform: uppercase;
   font-weight: bold;
   background: #11998e;
   background: -webkit-linear-gradient(to right, #11998e, #38ef7d);
   background: linear-gradient(to right, #11998e, #38ef7d);
-      border: 0px solid transparent;
+  border: 0px solid transparent;
   &:hover {
     color: #FFBC42;
     text-decoration: none;
   }
 }
 
+.panel.body {
+  background-color:  #f5f5f5;
+}
+.tab-content>.active {
+  background-color:  #f5f5f5;
+  min-height: 400px;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+}
 
-@media screen and (min-width: 480px) {
+.nav>li>a {
+  width: 200px;
+  text-align: center;
+}
+
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+  background-color:  #f5f5f5;
+  margin-right: 0px;
+}
+
+@media screen and (max-width: 1500px) and (min-width: 826px) {
 
   .xMobile {
-      display: none;
-    }
-  .panel.body {
-   background-color:  #f5f5f5;
+    display: none;
   }
 
-  .tab-content>.active {
-     background-color:  #f5f5f5;
-     min-height: 400px;
-     border-radius: 10px;
-         border: 1px solid #ddd;
+  .nav>li>a {
+    width: 200px;
+  }
 }
-  .nav-tabs>li.active>a:focus {
-     background-color:  #f5f5f5;
+
+@media screen and (max-width: 825px) and (min-width: 625px) {
+  .xMobile {
+    display: none;
+    // max-width: 90%;
   }
 
+  .nav>li>a {
+    width: auto;
+  }
 }
 
-@media screen and (max-width: 479px) {
-
+@media screen and (max-width: 624px) {
   .xFull {
-      display: none;
-    }
+    display: none;
+  }
 }
