aligned tabs left

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 main.container {
   padding: 0 15px;
   max-width: 750px;
-
+  margin-top: 5%;
 }
 
 .panel .container {
@@ -35,7 +35,6 @@ h3 {
 
 .nav-tabs {
   display: flex;
-  justify-content:  space-evenly;
   border-bottom: 0px;
 }
 
@@ -44,15 +43,17 @@ a {
   &#fullTabs-tab-1{
     color: #0B587C;
     text-transform: uppercase;
-
+    font-weight: bold;
   }
   &#fullTabs-tab-2{
     color: #0B587C;
     text-transform: uppercase;
+    font-weight: bold;
   }
   &#fullTabs-tab-3{
     color: #0B587C;
     text-transform: uppercase;
+    font-weight: bold;
   }
 
   &.standard-button {
@@ -78,6 +79,7 @@ i {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
 }
 
 select {
@@ -125,22 +127,25 @@ button.btn {
 .panel.body {
   background-color:  #f5f5f5;
 }
+
 .tab-content>.active {
   background-color:  #f5f5f5;
   min-height: 400px;
   border-radius: 10px;
   border: 1px solid #ddd;
+  border-radius: 0 10px 10px;
 }
 
 .nav>li>a {
-  width: 200px;
+  width: 215px;
   text-align: center;
 }
-
 
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
   background-color:  #f5f5f5;
   margin-right: 0px;
+  #fullTabs-tab-1{
+  }
 }
 
 
@@ -154,9 +159,6 @@ button.btn {
 
     max-width: 750px;
   }
-  .nav>li>a {
-    width: 200px;
-  }
 }
 
 @media screen and (max-width: 825px) and (min-width: 625px) {
@@ -165,7 +167,7 @@ button.btn {
   }
 
   .nav>li>a {
-    width: auto;
+    min-width: 150px;
   }
 }
 
