--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,8 @@
+body {
+  box-sizing: border-box;
+  border-radius: 10px
+}
+
 main.container {
   padding: 0 15px;
   max-width: 750px;
@@ -12,6 +17,13 @@ main.container {
 .contacts .panel-heading {
   text-align: center;
   background: #00c593;
+  height: 60px;
+  text-align: center;
+  justify-content: center;
+  padding: 0;
+  h3 {
+    margin: 0;
+  }
 }
 
 header {
@@ -19,25 +31,47 @@ header {
   background: #11998e;
   background: -webkit-linear-gradient(to right, #11998e, #38ef7d);
   background: linear-gradient(to right, #11998e, #38ef7d);
-
+  padding-bottom: 10px;
 }
 
 h1 {
   font-size: 25px;
+  margin: 15px auto;
 }
 
-h2, h3{
+h2 {
+  color: #11998e;
+  text-align: center;
+  font-size: 20px;
 }
 
 h3 {
   font-size: 18px;
 }
 
+ul {
+  list-style-type: none;
+}
+
+.emergency {
+  color: red;
+  margin-top: 10px;
+  font-size: 16px;
+}
+
 .nav-tabs {
   display: flex;
   border-bottom: 0px;
+  justify-content: space-between;
 }
 
+.tab-content>.active {
+  background-color:  #f5f5f5;
+  min-height: 300px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 10px;
+}
 
 a {
   &#fullTabs-tab-1{
@@ -49,6 +83,7 @@ a {
     color: #0B587C;
     text-transform: uppercase;
     font-weight: bold;
+
   }
   &#fullTabs-tab-3{
     color: #0B587C;
@@ -106,6 +141,7 @@ form {
   margin-bottom: 10px;
 }
 
+// background-image: linear-gradient(to right top, #11998e, #00af94, #00c593, #00da8b, #38ef7d);
 
 button.btn {
   background-color: #11998e;
@@ -128,16 +164,13 @@ button.btn {
   background-color:  #f5f5f5;
 }
 
-.tab-content>.active {
-  background-color:  #f5f5f5;
-  min-height: 400px;
-  border-radius: 10px;
-  border: 1px solid #ddd;
-  border-radius: 0 10px 10px;
+.navDivider {
+  color: #11998e;
+  padding: 10px;
+  font-weight: bold;
 }
 
 .nav>li>a {
-  width: 215px;
   text-align: center;
 }
 
@@ -146,6 +179,22 @@ button.btn {
   margin-right: 0px;
   #fullTabs-tab-1{
   }
+}
+
+.loginFull {
+  background-color: #00c593;
+  height: 100%;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 25px;
+
+}
+
+.loginFull .row {
+  margin: 10px auto;
+  width: 75%;
+  display: flex;
+align-items: center;
 }
 
 
@@ -159,7 +208,9 @@ button.btn {
 
     max-width: 750px;
   }
+
 }
+
 
 @media screen and (max-width: 825px) and (min-width: 625px) {
   .xMobile {
@@ -168,6 +219,22 @@ button.btn {
 
   .nav>li>a {
     min-width: 150px;
+  }
+
+  // .loginFull .row {
+  //   margin: 10px auto;
+  //   width: 75%;
+  // }
+}
+
+@media (min-width: 768px) {
+  .xMobile {
+    display: none;
+  }
+
+  .container {
+    max-width: 100%;
+    padding: 0;
   }
 }
 
