--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -141,6 +141,10 @@ form {
   margin-bottom: 10px;
 }
 
+.formFeelings:nth-child{
+  background-color: #f5f5f5;
+}
+
 // background-image: linear-gradient(to right top, #11998e, #00af94, #00c593, #00da8b, #38ef7d);
 
 button.btn {
