formatted diary date field

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,7 +11,6 @@ main.container {
 
 .panel .container {
   padding: 0;
-
 }
 
 .contacts .panel-heading {
@@ -141,8 +140,16 @@ form {
   margin-bottom: 10px;
 }
 
-.formFeelings:nth-child{
-  background-color: #f5f5f5;
+
+
+.dates {
+  min-height: 30px;
+  background-color: #00c593;
+}
+
+.dates:hover {
+  color: white;
+  background-color: #FFBC42;
 }
 
 // background-image: linear-gradient(to right top, #11998e, #00af94, #00c593, #00da8b, #38ef7d);
