--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,13 +62,16 @@ ul {
   display: flex;
   border-bottom: 0px;
   justify-content: space-between;
+  li {
+    flex-grow: 1;
+  }
 }
 
 .tab-content>.active {
   background-color:  #f5f5f5;
   min-height: 300px;
   border: 1px solid #ddd;
-  border-radius: 10px;
+  border-radius: 0 0 10px 10px;
   padding: 10px;
 }
 
@@ -140,17 +143,14 @@ form {
   margin-bottom: 10px;
 }
 
-
-
 .dates {
   min-height: 30px;
   background-color: #00c593;
+  color: white;
+  font-weight: bold;
 }
 
-.dates:hover {
-  color: white;
-  background-color: #FFBC42;
-}
+
 
 // background-image: linear-gradient(to right top, #11998e, #00af94, #00c593, #00da8b, #38ef7d);
 
@@ -208,6 +208,25 @@ button.btn {
 align-items: center;
 }
 
+.diaryShow{
+  p{
+    font-size: 1.25em;
+  }
+}
+
+.diaryTitle {
+  font-size: 2em;
+  p{
+      margin-bottom: 0;
+  }
+}
+
+.diaryDetails {
+  margin-top: 10px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  padding: 5px;
+}
 
 @media screen and (max-width: 1500px) and (min-width: 826px) {
 
@@ -216,10 +235,8 @@ align-items: center;
   }
 
   .container {
-
     max-width: 750px;
   }
-
 }
 
 
