crisis plan form posting and showing on profile page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,6 +26,14 @@ main.container {
   }
 }
 
+.planNames {
+  text-align: center;
+  min-height: 30px;
+  background-color: #00c593;
+  color: white;
+  font-weight: bold;
+}
+
 .supportView {
   h3 {
     margin: 0 auto 34.50px;
