sylted diary list on wide screen

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -304,6 +304,10 @@ align-items: center;
     padding-left: 0;
 }
 
+.xFull .dates {
+  font-size: 1em;
+}
+
 @media screen and (max-width: 1500px) and (min-width: 826px) {
 
   .xMobile {
