--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -299,6 +299,14 @@ align-items: center;
   text-align: center;
 }
 
+.planForm p {
+  margin-left: 30px;
+  padding-left: 10px;
+  background: #ccc;
+  border-radius: 10px;
+  width: 150px;
+}
+
 .planForm .col-xs-10 {
     padding-right: 0;
     padding-left: 0;
@@ -329,10 +337,6 @@ align-items: center;
     min-width: 150px;
   }
 
-  // .loginFull .row {
-  //   margin: 10px auto;
-  //   width: 75%;
-  // }
 }
 
 @media (min-width: 768px) {
