--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,10 @@ main.container {
   margin-top: 5%;
 }
 
+a:-webkit-any-link {
+    text-decoration: none;
+}
+
 .homeView {
   h3 {
     margin: 0 auto 34.50px;
@@ -180,8 +184,19 @@ i {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
+
+
+.linkButton{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  &:hover {
+    color: #FFBC42;
+    text-decoration: none;
+  }
+}
+
 
 select {
   border:  1px solid #ccc;
