added error messages for log in

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -229,6 +229,12 @@ form {
   font-weight: bold;
 }
 
+.loginFull{
+  p {
+    text-align: center;
+  }
+}
+
 
 
 // background-image: linear-gradient(to right top, #11998e, #00af94, #00c593, #00da8b, #38ef7d);
