--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -235,14 +235,12 @@ form {
   }
 }
 
-
-
 // background-image: linear-gradient(to right top, #11998e, #00af94, #00c593, #00da8b, #38ef7d);
 
 button.btn {
   background-color: #11998e;
   display: flex;
-  margin: 0 auto;
+  margin: 0;
   color: white;
   text-transform: uppercase;
   font-weight: bold;
@@ -250,10 +248,15 @@ button.btn {
   background: -webkit-linear-gradient(to right, #11998e, #38ef7d);
   background: linear-gradient(to right, #11998e, #38ef7d);
   border: 0px solid transparent;
+  justify-content: center;
   &:hover {
     color: #FFBC42;
     text-decoration: none;
   }
+}
+
+.col-md-2 {
+  padding-left: 0px;
 }
 
 .panel.body {
@@ -310,7 +313,6 @@ align-items: center;
   margin-top: 10px;
   background-color: #f5f5f5;
   border-radius: 10px;
-  padding: 5px;
 }
 
 .planForm h3 {
