made bottom margin0

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -324,7 +324,7 @@ align-items: center;
 }
 
 .planForm p {
-  margin:10px 0 10px 30px;
+  margin:10px 0 0 30px;
   padding-left: 10px;
   background: #ccc;
   border-radius: 5px;
